--- a/index.html
+++ b/index.html
@@ -13,22 +13,54 @@
 <body>
 
   <div class="row min-vh-100 no-gutters">
+
     <header class="col-12 col-lg-3 bg-dark text-light d-flex flex-column p-4 p-lg-3">
       <h1 class="text-center">Taskmaster Pro Edition</h1>
-      <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal">Add
-        Task</button>
+      <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal">Add Task</button>
       <button id="remove-tasks" class="btn btn-block btn-danger">Delete All Tasks</button>
       <p class="mt-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas architecto ipsa
         excepturi aut non
         laudantium sequi fugit officiis optio deleniti asperiores rem eius laborum maxime blanditiis culpa, quis iste?
       </p>
     </header>
+
     <main class="col-12 col-lg-9">
-      <div class="m-5">
-        <h2>To Do</h2>
-        <ul id="list-toDo" class="list-group"> </ul>
+      <div class="m-5 row justify-content-around">
+        <!--Todo Start-->
+        <div class="col-12 col-md-6 col-xl-3 mb-3">
+          <div class="card">
+            <h4 class="card-header">To Do</h4>
+            <ul id="list-toDo" class="list-group list-group-flush"></ul>
+          </div>
+        </div>
+        <!-- Todo end -->
+        <!-- In Progress Start-->
+        <div class="col-12 col-md-6 col-xl-3 mb-3">
+          <div class="card">
+            <h4 class="card-header">In Progress</h4>
+            <ul id="list-inProgress" class="list-group list-group-flush"></ul>
+          </div>
+        </div>
+        <!-- In progress end -->
+        <!-- In review start-->
+        <div class="col-12 col-md-6 col-xl-3 mb-3">
+          <div class="card">
+            <h4 class="card-header">In Review</h4>
+            <ul id="list-inReview" class="list-group list-group-flush"></ul>
+          </div>
+        </div>
+        <!-- In review end -->
+        <!-- Done Start -->
+        <div class="col-12 col-md-6 col-xl-3 mb-3">
+          <div class="card">
+            <h4 class="card-header">Done</h4>
+            <ul id="list-done" class="list-group list-group-flush"></ul>
+          </div>
+        </div>
+        <!-- Done end -->
       </div>
     </main>
+
   </div>
 
   <!-- Modal -->
@@ -46,11 +78,11 @@
           <form>
             <div class="form-group">
               <label for="modalTaskDescription">Task description</label>
-              <textarea id="modalTaskDescription" rows="3"></textarea>
+              <textarea id="modalTaskDescription" rows="3" class="form-control"></textarea>
             </div>
             <div class="form-group">
               <label for="modalDueDate">Due date</label>
-              <input type="text" id="modalDueDate" placeholder="mm/dd/yyyy" autocomplete="off" />
+              <input type="text" id="modalDueDate" placeholder="mm/dd/yyyy" autocomplete="off" class="form-control"/>
             </div>
           </form>
         </div>
